[Update] Implemented logout
